# claude-code-plugin-manager

./: .gitignore  README.md  README_EN.md  README_RU.md  cpm.bat  demo.bat  pyproject.toml  requirements.txt
claude_plugins_manager/: __init__.py  cli.py  config.py  manager.py
