[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-plugins-manager"
version = "0.3.0"
description = "CLI tool for managing Claude Code plugins"
authors = [{name = "User"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.36",
]

[project.scripts]
cpm = "claude_plugins_manager.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
